@@ -32,9 +32,11 @@
 
 		<?php if ( has_nav_menu( 'primary' ) ) : ?> 
 			<?php wp_nav_menu( array( 'theme_location' => 'primary', 'container_class' => 'nav-head' ) ); ?>
-			<div class="mobile-nav-toggle"><?php _e( 'Menu', 'myknowledgebase' ); ?><?php _e( ' +', 'myknowledgebase' ); ?></div>
-			<div class="mobile-nav">
-				<?php wp_nav_menu( array( 'theme_location' => 'primary' ) ); ?>
+			<div class="mobile-nav-container">
+				<div class="mobile-nav-toggle"><?php _e( 'Menu', 'myknowledgebase' ); ?><?php _e( ' +', 'myknowledgebase' ); ?></div>
+				<div class="mobile-nav">
+					<?php wp_nav_menu( array( 'theme_location' => 'primary' ) ); ?>
+				</div>
 			</div>
 		<?php endif; ?>
 	</div>
