@@ -1,7 +1,7 @@
 === MyKnowledgeBase ===
 Contributors: Guido07111975
 Donate link: https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=donation%40guidovanderleest%2enl
-Version: 5.5
+Version: 5.6
 Requires at least: 4.7
 Tested up to: 4.8
 License: GNU General Public License v3 or later
