@@ -1,7 +1,7 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: http://www.guidovanderleest.nl/myknowledgebase
-Version: 5.5
+Version: 5.6
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the default categories and posts. Features: sidebar, homepage widgets, footer widgets, custom header image, custom background, custom logo to replace site title and tagline, full width page template, dropdown navigation. For more info please check readme file. Enjoy.
@@ -174,6 +174,7 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
 /* HEADER FIRST MOBILE MENU */
+.mobile-nav-container {display:none;}
 .mobile-nav-toggle {display:none;}
 .mobile-nav {display:none;}
 
@@ -296,7 +297,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 
 /* COMMENTS RESPOND */
-#respond {width:100%; clear:both;}
+#respond {width:100%; clear:both; padding:0 0 10px;}
 .comment-form label {padding:0 0 5px; display:block;}
 .comment-form input, .comment-form textarea {width:80%;}
 .comment-form input[type="submit"] {width:auto;}
@@ -352,6 +353,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	.nav-head {display:none;} 
 
 	/* HEADER FIRST MOBILE MENU */
+	.mobile-nav-container {clear:both; display:block;}
 	.mobile-nav-toggle {clear:both; display:block; margin:0 0 20px; padding:10px 2%; background:#08a0ff; color:#fff; cursor:pointer;}
 	.mobile-nav-toggle:hover {color:#eee;}
 	.mobile-nav {clear:both; padding:10px 20px 10px 0; margin:0 5px 20px; background:#fff; border:2px solid #eee;}
